--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -16,7 +16,7 @@
   Keywords = {underreview},  
   addendum ={\textbf{\textcolor{themecolor}{\textit{Third round review} \cvtag{SSCI: IF 1.741}}}}  
 }
-@article{ZhouCIE2019,
+@article{CIE2020_coevolutionary,
   title={Coevolution based procedure to determine the terminal handling charges for competitive container terminals.},
   author={Yanjie Zhou and Kap Hwan Kim},
   Author+an = {1=highlight},
