--- a/_posts/2021-04-29-blog-post-2.md
+++ b/_posts/2021-04-29-blog-post-2.md
@@ -11,16 +11,18 @@ tags:
 ---
 
 
-# Exact method
+# Exact method based solvers
 
 1. [CPLEX](https://www.ibm.com/analytics/cplex-optimizer) commercial software
-2. [Gurobi](https://www.gurobi.com/) commercial software
-3. [Mosek](https://www.mosek.com/) commercial software
-4. [LINGO](https://www.lindo.com/index.php/products/lingo-and-optimization-modeling?catid=89&id=88:powerful-lingo-solvers) commercial software
-5. [Google OR-Tools](https://developers.google.com/optimization), C++, [source code](https://github.com/google/or-tools)
-6. [GLPK](https://www.gnu.org/software/glpk/), ANSI C, [source code](https://www.gnu.org/software/glpk/#TOCdownloading)
-7. [SCIP](https://www.scipopt.org/), C/C++,[source code](https://scip.zib.de/download.php?fname=scipoptsuite-7.0.2.tgz)
-8. [Lp_solve](https://cran.r-project.org/web/packages/lpSolve/index.html), C, [source code](https://cran.r-project.org/src/contrib/Archive/lpSolve)
+    1. [OPL Studio course](http://runelarsen.dk/elearn/)
+    2. [Introduction to ILOG CPLEX Optimization Studio](https://courses.ie.bilkent.edu.tr/ie477/wp-content/uploads/sites/2/2019/12/cplex.pdf)
+3. [Gurobi](https://www.gurobi.com/) commercial software
+4. [Mosek](https://www.mosek.com/) commercial software
+5. [LINGO](https://www.lindo.com/index.php/products/lingo-and-optimization-modeling?catid=89&id=88:powerful-lingo-solvers) commercial software
+6. [Google OR-Tools](https://developers.google.com/optimization), C++, [source code](https://github.com/google/or-tools)
+7. [GLPK](https://www.gnu.org/software/glpk/), ANSI C, [source code](https://www.gnu.org/software/glpk/#TOCdownloading)
+8. [SCIP](https://www.scipopt.org/), C/C++,[source code](https://scip.zib.de/download.php?fname=scipoptsuite-7.0.2.tgz)
+9. [Lp_solve](https://cran.r-project.org/web/packages/lpSolve/index.html), C, [source code](https://cran.r-project.org/src/contrib/Archive/lpSolve)
 
 
 # Heuristics
@@ -34,7 +36,13 @@ tags:
     6. Simulation-based Optimization
     7. Experiment Design and Analysis
     8. Plugin-based Architecture
-    
+ 
+# Optimization Modeling Language
+
+1. [Pyomo](https://link.springer.com/book/10.1007/978-3-030-68928-5)
+2. [GAMS: General Algebraic Modeling System](https://www.gams.com/)
+3. [AMPL: A Mathematical Programming Language](https://ampl.com/)
+
 # Tools
 
 1. [Online Linear Optimization Solver](http://online-optimizer.appspot.com/)
