--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,7 +1,460 @@
-@article{ZhouAJSL2019,
-  title={Optimal Parameters of Fixed and Variable Rental Fees in Concession Contracts for Port Authorities},
-  author={Yanjie Zhou and Kap Hwan Kim},  
-  journal={International Journal of Logistics Research and Applications},
-  year={2019}
+@inproceedings{bing2014computation,
+  title={Computation-aware motion estimation algorithm based on QoE control},
+  author={Bing, Zhou and Yanjie, Zhou and Mingliang, Xu and Fei, Wu},
+  booktitle={2014 IEEE Computers, Communications and IT Applications Conference},
+  pages={261--265},
+  year={2014},
+  organization={IEEE}
 }
 
+@article{gao2017handling,
+  title={Handling Data Skew in MapReduce Cluster by Using Partition Tuning},
+  author={Gao, Yufei and Zhou, Yanjie and Zhou, Bing and Shi, Lei and Zhang, Jiacai},
+  journal={Journal of Healthcare Engineering},
+  volume={2017},
+  number={2017},
+  pages={12},
+  year={2017},
+  publisher={Hindawi}
+}
+
+@article{zhou2018linking,
+  title={Linking soft computing to art: introduction of efficient k-continuous line drawing},
+  author={Zhou, Yanjie and Lee, Gyu M},
+  journal={Applied Soft Computing},
+  volume={68},
+  pages={932--943},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{gu2018medical,
+  title={Medical Relief Shelter Location Problem with Patient Severity under a Limited Relief Budget},
+  author={Gu, Jeongmin and Zhou, Yanjie and Das, Amrit and Moon, Ilkyeong and Lee, Gyu M},
+  journal={Computers \& Industrial Engineering},
+  volume={125},
+  pages={720--728},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{gao2017hybrid,
+  title={A hybrid genetic algorithm for multi-emergency medical service centers location-allocation problem in disaster response.},
+  author={Gao, Xuehong and Zhou, Yanjie and Amir, Muhammad Idil Haq and Rosyidah, Fifi Alfiana and Lee, Gyu M},
+  journal={International Journal of Industrial Engineering: Theory, Applications and Practice},
+  volume={24},
+  number={6},
+  pages={663--679},
+  year={2017}
+}
+
+@article{zhou2017lagrangian,
+  title={A Lagrangian relaxation-based solution method for a green vehicle routing problem to minimize greenhouse gas emissions},
+  author={Zhou, Yanjie and Lee, Gyu},
+  journal={Sustainability},
+  volume={9},
+  number={5},
+  pages={776},
+  year={2017},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{gao2018transfer,
+  title={Transfer learning-based behavioural task decoding from brain activity},
+  author={Gao, Yufei and Zhou, Bing and Zhou, Yanjie and Shi, Lei and Tao, Yongcai and Zhang, Jiacai},
+  booktitle={The International Conference on Healthcare Science and Engineering},
+  pages={71--81},
+  year={2018},
+  organization={Springer Singapore Singapore}
+}
+
+@article{zhou2021optimal,
+  title={Optimal concession contract between a port authority and container-terminal operators by revenue-sharing schemes with quantity discount},
+  author={Zhou, Yanjie and Kim, Kap Hwan},
+  journal={Maritime Policy \& Management},
+  volume={48},
+  number={7},
+  pages={1010--1031},
+  year={2021},
+  publisher={Routledge}
+}
+
+@article{zhou2020game,
+  title={A game theoretic model and a coevolutionary solution procedure to determine the terminal handling charges for container terminals},
+  author={Zhou, Yanjie and Kim, Kap Hwan},
+  journal={Computers \& Industrial Engineering},
+  volume={144},
+  pages={106466},
+  year={2020},
+  publisher={Pergamon}
+}
+
+@article{zhou2020optimal,
+  title={Optimal parameters in concession contracts between container terminal operators and investors},
+  author={Zhou, Yanjie and Kim, Kap Hwan},
+  journal={International Journal of Logistics Research and Applications},
+  volume={23},
+  number={6},
+  pages={602--625},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{shi2020lexicographic,
+  title={A lexicographic-based two-stage algorithm for vehicle routing problem with simultaneous pickup--delivery and time window},
+  author={Shi, Yong and Zhou, Yanjie and Boudouh, Toufik and Grunder, Olivier},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={95},
+  pages={103901},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{shi2020relative,
+  title={A relative robust optimization for a vehicle routing problem with time-window and synchronized visits considering greenhouse gas emissions},
+  author={Shi, Yong and Zhou, Yanjie and Ye, Wenhui and Zhao, Qian Qian},
+  journal={Journal of Cleaner Production},
+  volume={275},
+  pages={124112},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{tiwari2021freight,
+  title={Freight consolidation and containerization strategy under business as usual scenario \& carbon tax regulation},
+  author={Tiwari, Sunil and Wee, Hui Ming and Zhou, Yanjie and Tjoeng, Leonardo},
+  journal={Journal of Cleaner Production},
+  volume={279},
+  pages={123270},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{dou2021can,
+  title={How can manufacturers make decisions on product appearance design? A research on optimal design based on customers’ emotional satisfaction},
+  author={Dou, Runliang and Li, Wei and Nan, Guofang and Wang, Xiaoqiu and Zhou, Yanjie},
+  journal={Journal of Management Science and Engineering},
+  volume={6},
+  number={2},
+  pages={177--196},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{wang2021effective,
+  title={An effective feature extraction method based on GDS for atrial fibrillation detection},
+  author={Wang, Haiyan and Dai, Honghua and Zhou, Yanjie and Zhou, Bing and Lu, Peng and Zhang, Hongpo and Wang, Zongmin},
+  journal={Journal of Biomedical Informatics},
+  volume={119},
+  pages={103819},
+  year={2021},
+  publisher={Academic Press}
+}
+
+@article{wang2021interactive,
+  title={Interactive ECG annotation: An artificial intelligence method for smart ECG manipulation},
+  author={Wang, Haiyan and Zhou, Yanjie and Zhou, Bing and Niu, Xiangdong and Zhang, Hua and Wang, Zongmin},
+  journal={Information Sciences},
+  volume={581},
+  pages={42--59},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{feng2022unsupervised,
+  title={Unsupervised semantic-aware adaptive feature fusion network for arrhythmia detection},
+  author={Feng, Panpan and Fu, Jie and Ge, Zhaoyang and Wang, Haiyan and Zhou, Yanjie and Zhou, Bing and Wang, Zongmin},
+  journal={Information Sciences},
+  volume={582},
+  pages={509--528},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{wang2022contract,
+  title={Contract design for the fourth party logistics considering tardiness risk},
+  author={Wang, Hongyan and Huang, Min and Wang, Hongfeng and Feng, Xuehao and Zhou, Yanjie},
+  journal={International Journal of Industrial Engineering Computations},
+  volume={13},
+  number={1},
+  pages={13--30},
+  year={2022},
+  publisher={GROWING SCIENCE 611, 141 DAVISVILLE AVE, TORONTO, ON M4S 1G7, CANADA}
+}
+
+@article{zhou2020bi,
+  title={A BI-OBJECTIVE MEDICAL RELIEF SHELTER LOCATION PROBLEM CONSIDERING COVERAGE RATIOS.},
+  author={Zhou, Yanjie and Lee, Gyu M},
+  journal={International Journal of Industrial Engineering},
+  volume={27},
+  number={6},
+  year={2020}
+}
+
+@article{dui2022maintenance,
+  title={Maintenance analysis of transportation networks by the traffic transfer principle considering node idle capacity},
+  author={Dui, Hongyan and Chen, Shuanshuan and Zhou, Yanjie and Wu, Shaomin},
+  journal={Reliability Engineering \& System Safety},
+  volume={221},
+  pages={108386},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@inproceedings{wang2021novel,
+  title={A Novel Method for Detection of ECG with Deep Learning},
+  author={Wang, Haiyan and Zhou, Yanjie and Zhou, Bing and Wang, Zongmin},
+  booktitle={2021 7th International Conference on Computer and Communications (ICCC)},
+  pages={631--635},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{shi2022memetic,
+  title={A memetic algorithm for a relocation-routing problem in green production of gas considering uncertainties},
+  author={Shi, Yong and Zhou, Yanjie and Boudouh, Toufik and Grunder, Olivier},
+  journal={Swarm and Evolutionary Computation},
+  volume={74},
+  pages={101129},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{xu2023cost,
+  title={Cost-sharing contract design between manufacturer and dealership considering the customer low-carbon preferences},
+  author={Xu, Chunqiu and Jing, Yu and Shen, Bo and Zhou, Yanjie and Zhao, Qian Qian},
+  journal={Expert Systems with Applications},
+  volume={213},
+  pages={118877},
+  year={2023},
+  publisher={Pergamon}
+}
+
+@article{feng2023semantic,
+  title={Semantic-aware alignment and label propagation for cross-domain arrhythmia classification},
+  author={Feng, Panpan and Fu, Jie and Wang, Ning and Zhou, Yanjie and Zhou, Bing and Wang, Zongmin},
+  journal={Knowledge-Based Systems},
+  volume={264},
+  pages={110323},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{xu2023manufacturers,
+  title={Manufacturers' emission reduction investment strategy under carbon cap-and-trade policy and uncertain low-carbon preferences},
+  author={Xu, Chunqiu and Liu, Fengzhi and Zhou, Yanjie and Dou, Runliang and Feng, Xuehao and Shen, Bo},
+  journal={Industrial Management \& Data Systems},
+  volume={123},
+  number={10},
+  pages={2522--2550},
+  year={2023},
+  publisher={Emerald Publishing Limited}
+}
+
+@article{li2023optimization,
+  title={Optimization of train formation plan based on technical station under railcar demand fluctuation},
+  author={Li, Bing and Jiang, Shangtao and Zhou, Yanjie and Xuan, Hua},
+  journal={Journal of Industrial and Production Engineering},
+  volume={40},
+  number={6},
+  pages={448--463},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
+@article{shi2023adaptive,
+  title={An adaptive large neighborhood search based approach for the vehicle routing problem with zone-based pricing},
+  author={Shi, Yong and Liu, Wenheng and Zhou, Yanjie},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={124},
+  pages={106506},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{wang2023fourth,
+  title={Fourth party logistics service quality management with logistics audit.},
+  author={Wang, Hongyan and Huang, Min and Wang, Hongfeng and Zhou, Yanjie},
+  journal={Journal of Industrial \& Management Optimization},
+  volume={19},
+  number={10},
+  year={2023}
+}
+
+@article{wang2023adversarial,
+  title={Adversarial spatiotemporal contrastive learning for electrocardiogram signals},
+  author={Wang, Ning and Feng, Panpan and Ge, Zhaoyang and Zhou, Yanjie and Zhou, Bing and Wang, Zongmin},
+  journal={IEEE Transactions on Neural Networks and Learning Systems},
+  volume={35},
+  number={10},
+  pages={13845--13859},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{liu2024optimizing,
+  title={Optimizing the scheduling scheme for NSR/SCR tramp vessel shipping between Asia and Europe},
+  author={Liu, Chengcheng and Zhou, Yanjie and Yang, Zhongzhen and Li, Yumin and Li, Tao},
+  journal={Ocean Engineering},
+  volume={304},
+  pages={117747},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{xin2024dynamic,
+  title={Dynamic task allocation of hybrid flow shop for machines in parallel with different speeds based on an MLD prediction model},
+  author={Xin, Jianbin and Li, Sixuan and Zhou, Yanjie and D’Ariano, Andrea},
+  journal={Journal of Industrial and Production Engineering},
+  volume={41},
+  number={6},
+  pages={504--521},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
+
+@article{zhang2024blockchain,
+  title={Blockchain adoption and mode selection strategies for remanufacturing supply chain under cap-and-trade policy},
+  author={Zhang, Yanliang and Zhang, Jingrui and Zhou, Yanjie and Zhao, Huadong and Cheng, Yanpei},
+  journal={Computers \& Industrial Engineering},
+  volume={192},
+  pages={110246},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{zhong2024two,
+  title={Two incentive policies for green shore power system considering multiple objectives},
+  author={Zhong, Ziyi and Jin, Huan and Sun, Yuyao and Zhou, Yanjie},
+  journal={Computers \& Industrial Engineering},
+  volume={194},
+  pages={110338},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{li2024spatio,
+  title={Spatio-temporal vulnerability of high-speed rail line network in China},
+  author={Li, Tao and Qin, Yu and Xu, Mengqiao and Zhou, Yanjie and Rong, Lili},
+  journal={Transportation Research Part D: Transport and Environment},
+  volume={134},
+  pages={104338},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{xin2024dynamic,
+  title={Dynamic unbalanced task allocation of warehouse AGVs using integrated adaptive large neighborhood search and Kuhn--Munkres algorithm},
+  author={Xin, Jianbin and Yuan, Quan and D’Ariano, Andrea and Guo, Guanqin and Liu, Yanhong and Zhou, Yanjie},
+  journal={Computers \& Industrial Engineering},
+  volume={195},
+  pages={110410},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{wang2025low,
+  title={A Low-Cost and stable DAL arrhythmia detection algorithm based on the weak stratification query strategy of morphological statistical features},
+  author={Wang, Haiyan and Zhou, Yanjie and Niu, Xiangdong and Liu, Daijun and Li, Lingling and Duan, Ying and Wang, Zongmin},
+  journal={Expert Systems with Applications},
+  volume={261},
+  pages={125482},
+  year={2025},
+  publisher={Pergamon}
+}
+
+@article{feng2024resilient,
+  title={Resilient shuttle vehicle plan under route disruption scenarios and ticketing policies: a case study of the Qiandaohu archipelago scenic area, China},
+  author={Feng, Xuehao and Li, Dengke and Shin, Youngchul and Zhou, Yanjie},
+  journal={Current Issues in Tourism},
+  pages={1--20},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
+
+@article{li2025workload,
+  title={Workload-based adaptive decision-making for edge server layout with deep reinforcement learning},
+  author={Li, Shihua and Zhou, Yanjie and Zhou, Bing and Wang, Zongmin},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={139},
+  pages={109662},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{li2025dynamic,
+  title={Dynamic weight reinforcement learning method considering multiple factors in mobile edge computing system},
+  author={Li, Shihua and Zhou, Yanjie and Liu, Xiangqian and Wang, Ning and Wang, Junqi and Zhou, Bing and Wang, Zongmin},
+  journal={Neurocomputing},
+  volume={620},
+  pages={129194},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{zhou2025less,
+  title={Less-than-container cargo scheduling for China Railway Express along belt and road initiative routes},
+  author={Zhou, Yanjie and He, Zhanwen and Liu, Chengcheng and Zhang, Jingrong and Li, Yumin and Wang, Yan},
+  journal={Transportation Research Part E: Logistics and Transportation Review},
+  volume={197},
+  pages={104066},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@inproceedings{zhou2024alipay,
+  title={Alipay Top Up Problem: A Case Study of Algorithms Make a Better Decision},
+  author={Zhou, Yanjie and Zhao, Xiang and Zhang, Zhicheng},
+  booktitle={2024 10th International Conference on Computer and Communications (ICCC)},
+  pages={2031--2035},
+  year={2024},
+  organization={IEEE}
+}
+
+@article{li2025enhancing,
+  title={Enhancing random surface anomaly detection in real-world using a four-stage one-class approach},
+  author={Li, Pulin and Wu, Guocheng and Zhou, Yanjie and Leng, Jiewu},
+  journal={Pattern Recognition Letters},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{li2025hybrid,
+  title={Hybrid train formation plan integrating one-block and two-block trains from a technical station under wagon demand fluctuation},
+  author={Li, Bing and Bian, Menglin and Zhou, Yanjie and Xuan, Hua},
+  journal={Engineering Optimization},
+  pages={1--33},
+  year={2025},
+  publisher={Taylor \& Francis}
+}
+
+@article{tan2025pediatric,
+  title={A pediatric ECG database with disease diagnosis covering 11643 children},
+  author={Tan, Jian and Fan, Haoyi and Luo, Jiawei and Zhou, Yanjie and Wang, Ning and Wang, Xizheng and Liu, Guizhi and Liu, Chengyu and Wang, Zongmin},
+  journal={Scientific Data},
+  volume={12},
+  number={1},
+  pages={867},
+  year={2025},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{xin2025routing,
+  title={Routing fast-charging AGVs for non-stop manufacturing: MILP model and adaptive large neighborhood search},
+  author={Xin, Jianbin and Guo, Shilong and Liu, Yanhong and Zhou, Yanjie and D’Ariano, Andrea},
+  journal={Computers \& Industrial Engineering},
+  pages={111355},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{zhou2025data,
+  title={Data driven-based thesis defense scheduling system: A theoretical framework and empirical development},
+  author={Zhou, Yanjie and Zhang, Zhicheng and Song, Ningning and Zhang, Jincan},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={159},
+  pages={111697},
+  year={2025},
+  publisher={Elsevier}
+}
+解释
